Fix modernizer violations
Upgraded modernizer is flagging a ton of violations, fix them up.

Change-Id: I1bb111c38d55164f3ec4994bc8791c9024eee93c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>